# KAEM-profile

./: .gitignore  .plt_grid_img.py.swp  Makefile  Manifest.toml  Project.toml  README.md  baseline.jl  diagnose_compile.jl  extract_symbolic_priors.jl  jobs.txt  latent_interpolation.jl  latent_traversal.jl  main.jl  plot_prior.jl  plt_grid_img.py  pyproject.toml  regen_celeba.jl  run.sh  test_hlo.jl  test_prep_smoke.jl  train_from_checkpoint.jl  tuning.jl
.github/workflows/: gpu-tests.yml  kaem-tests.yml  python-lint.yml
benches/: ITS_single.jl  ddpm_latent_dim.jl  ddpm_sampling.jl  latent_dim.jl  pang_latent_dim.jl  pang_sampling.jl  prior_steps.jl  temperatures.jl  vae_latent_dim.jl  vae_sampling.jl
benches/results/: ITS_generation.csv  ITS_sampling.csv  ITS_single.csv  ddpm_latent_dim.csv  ddpm_sampling.csv  latent_dim.csv  latent_dim_importance.csv  latent_dim_ula.csv  pang_latent_dim.csv  pang_sampling.csv  temperatures.csv  vae_latent_dim.csv  vae_sampling.csv
config/: baseline_celeba_config.ini  baseline_cifar_config.ini  baseline_config.ini  baseline_nist_config.ini  baseline_svhn_config.ini  celeba_config.ini  celeba_pang_config.ini  celeba_tuning_config.ini  cifar_config.ini  cifar_pang_config.ini  darcy_flow_config.ini  nist_config.ini  nist_tuning_conf.ini  nist_tuning_config.ini  svhn_config.ini  svhn_pang_config.ini  svhn_tuning_conf.ini  svhn_tuning_config.ini  svhn_tuning_confing.ini  text_config.ini
notebooks/: pretrained_samples.ipynb  pretrained_samples.py  profile.ipynb  profiling_colab.ipynb
notebooks/.ipynb_checkpoints/: profile-checkpoint.ipynb  profiling_colab-checkpoint.ipynb
plotting/: model_utils.jl  plot_prior.jl
plotting/benchmark/: plot_cost.py
plotting/results/: image_metrics.py  plot_gif.py  plot_gif_ula.py  plot_inductive.py  plot_ula.py
plotting/visual_plots/: cyclic_annealing.py  power_posterior.py  tempered_integral.py
profiles/: profile_gpu.json
scripts/: init.sh  pretrained_samples.py  profile_gpu.jl  run_batch.sh  run_benchmarks.sh  run_distributed.sh  run_plots.sh  run_sequential.sh  run_tests.sh
src/: utils.jl
src/KAEM/: KAEM.jl  grid_updating.jl  model_setup.jl  rng.jl
src/KAEM/ebm/: ebm_model.jl  inverse_transform.jl  log_prior_fcns.jl  mixture_selection.jl  quadrature.jl  ref_priors.jl
src/baseline/: baseline.jl  rng.jl
src/pipeline/: data_utils.jl  manual_adam.jl  optimizer.jl  trainer.jl
tests/: baseline_conf.ini  baseline_tests.jl  basis_tests.jl  function_tests.jl  lkhood_tests.jl  model_tests.jl  prior_tests.jl  resampler_tests.jl  sampling_tests.jl  save_load_tests.jl  symb_reg_tests.jl  test_baseline_conf.ini  test_conf.ini  thermo_tests.jl  time_compile.jl  ula_tests.jl  variational_tests.jl
(+118 files in other folders)
