[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaem"
version = "0.1.0"
description = "KAEM: Kolmogorov-Arnold Energy Models"
authors = [{name = "KAEM Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "seaborn",
    "h5py",
    "torch",
    "torch_fidelity",
    "scikit-learn",
    "pillow>=12.2.0",
    "imageio",
    "diffusers",
    "accelerate",
    "tqdm",
    "Pygments>=2.20.0",
    "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov",
    "ruff",
    "mypy",
]
notebook = [
    "jupyter",
    "nbformat",
    "nbstripout",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
